--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,7 +7,7 @@
   <title>Lego Collection</title>
 </head>
 <body>
-  <%- include('partials/navbar', {page: '/404'}) %>
+  <%- include('partials/navbar', {page: '404'}) %>
   <div class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
     <h1 class="my-4 text-center">404</h1>
     <img src="https://media.istockphoto.com/id/1153372686/photo/404-error-page-not-found.webp?b=1&s=170667a&w=0&k=20&c=yAVb0dfxHGQooo1-kmjyGnM5SY22TE82x34IfHFfhLI=" alt="404">
