--- a/views/setDetail.ejs
+++ b/views/setDetail.ejs
@@ -7,7 +7,8 @@
   <title>About Lego Sets</title>
 </head>
 <body>
-  <%- include('partials/navbar', {page: '/lego/sets'}) %>
+  <!-- <%- include('partials/navbar', {page: '/lego/sets'}) %> -->
+  <%- include('partials/navbar', {page: '/'}) %>
 
   <div class="container mx-auto">
     <!-- About I like -->
@@ -28,6 +29,7 @@
         <p class="my-4" id="randomQuote"></p>
         <div>
           <button class="btn btn-active btn-neutral bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75" href="#" onclick="history.back(); return false;">Return</button>
+          <a href="/lego/editSet/<%= set.set_num %>" class="btn btn-success">Edit</a>
         </div>
       </div>
     </div>
@@ -35,12 +37,7 @@
   <script>
     document.addEventListener("DOMContentLoaded", ()=>{
       fetch("https://quotable.io/random")
-        .then(res => {
-          if (!res.ok) {
-            throw new Error('The Network Response Was NOT Well!');
-          }
-          return res.json();
-        })
+        .then(res => res.json())
         .then(data => {
           const quoteElement = document.getElementById('randomQuote');
           quoteElement.innerHTML = `"${data.content}" — ${data.author}`;
