--- a/views/setDetail.ejs
+++ b/views/setDetail.ejs
@@ -7,7 +7,7 @@
   <title>About Lego Sets</title>
 </head>
 <body>
-  <%- include('partials/navbar', {page: '/lego/sets'}) %>
+  <%- include('partials/navbar', {page: '/'}) %>
 
   <div class="container mx-auto">
     <!-- About I like -->
@@ -23,24 +23,20 @@
       </div>
       <div>
         <p class="my-4">Year: <%= set.year %></p>
-        <p class="my-4">Theme: <%= set.theme %></p>
+        <p class="my-4">Theme: <%= set.theme.name %></p>
         <p class="my-4">Parts: <%= set.num_parts %></p>
         <p class="my-4" id="randomQuote"></p>
         <div>
           <button class="btn btn-active btn-neutral bg-violet-500 text-white font-semibold rounded-full shadow-md hover:bg-violet-700 focus:outline-none focus:ring focus:ring-violet-400 focus:ring-opacity-75" href="#" onclick="history.back(); return false;">Return</button>
+          <a href="/lego/editSet/<%= set.set_num %>" class="btn btn-success">Edit</a>
         </div>
       </div>
     </div>
   </div>
-  <script>
+  <!-- <script>
     document.addEventListener("DOMContentLoaded", ()=>{
       fetch("https://quotable.io/random")
-        .then(res => {
-          if (!res.ok) {
-            throw new Error('The Network Response Was NOT Well!');
-          }
-          return res.json();
-        })
+        .then(res => res.json())
         .then(data => {
           const quoteElement = document.getElementById('randomQuote');
           quoteElement.innerHTML = `"${data.content}" — ${data.author}`;
@@ -49,6 +45,6 @@
     /* TODO: "fetch" the data at: https://quotable.io/random and update an element in the DOM with the "content" and "author" */
 
     });
-  </script>
+  </script> -->
 </body>
 </html>
